Fixed text shadowing and officer alignment

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,6 +6,7 @@ div.opening {
   width: auto;
   justify-content: space-between;
   display: flex;
+  margin-bottom: 1em;
 }
 
 nav {
@@ -55,8 +56,8 @@ hr {
 h1.display-1 {
   font-weight: 300;
   color: white;
-  text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
-             #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
+  text-shadow: #000 0px 0px 3px,   #000 0px 0px 3px,   #000 0px 0px 3px,
+             #000 0px 0px 3px,   #000 0px 0px 3px,   #000 0px 0px 3px;
 }
 
 /* Medium devices (desktops, 992px and up) @screen-md-min*/
